Added welcome email

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -10,32 +10,45 @@
 
     <div style="padding: 1em;">
 
-        <h3>South Florida, Fall League is Back!</h3>
+        <h3>South Florida, Fall League Has Begun!</h3>
 
-        <div>
-            <img class="feat-img" src="https://www.sflultimate.com/images/league-medals-2015-spring.jpg" alt="">
-            <img class="feat-img" src="https://www.sflultimate.com/images/aikeem-the-dream.jpg" alt="">
-            <img class="feat-img" src="https://www.sflultimate.com/images/league-champions-2017-spring.jpg" alt="">
-        </div>
-
-        <p>We are very excited to announce that ultimate is back at <strong>Amelia Earhart Park</strong> for South Florida Ultimate fall league!</p>
-
-        <p>Regular season games will be Wednesday evenings at 8pm, <strong>starting October 6th.</strong></p>
-
-        <p>We're planning on <strong>8 weeks of play on Wednesdays</strong>, skipping the Wednesday of Thanksgiving week and ending on Wednesday, December 1st. Finals are planned for December 12th, and will be at Amelia Earhart Park.</p>
-
-        <p>Registration ends <strong>Tuesday, October 5th at midnight EST</strong> and the costs are:</p>
-
+        <p>Hello everyone,</p>
+        <p>First of all, thank you to the following volunteers, for their help in making this happen:</p>
         <ul>
-            <li>$30 for students</li>
-            <li>$50 for everyone else</li>
+            <li>Sofia Whittaker</li>
+            <li>Prahasi Khacham</li>
+            <li>AJ Jacoski</li>
         </ul>
 
-        <p>Player fees will be put toward fields, lights, insurance, and jerseys for the league.</p>
-        <a target="_blank" class="cta" href="https://www.sflultimate.com/register?utm_source=email&utm_medium=email&utm_campaign=unregistered">Register Now!</a>
+        <p>Thank you to our <strong>amazing captains</strong> of this year's fall league!</p>
+        <ul>
+            <li>Thomas Stoller</li>
+            <li>David Amparan</li>
+            <li>Tomas Heredia</li>
+            <li>Darly Kittle</li>
+        </ul>
+        
+        <p>Now onto the details you have been waiting, your teams have been drafted and can be seen here: </p>
+        
+        <a class="cta" href="https://www.sflultimate.com/teams">See My Team</a>
 
-        <p><em>You were sent this email because you previously participated in an SFL Ultimate paid event.  If you would not like to receive messages like these in the future, please email sflultimate@gmail.com with subject "Unsubscribe" so that we may remove you from this list.</em></p>
-
+        <p>As for the games happening today (Wednesday) please be there by <strong>7:15pm.</strong>  Games will start at 8pm.</p>
+        <p>Our games for this week are:</p>
+        <ul>
+            <li>Field #2: Vice City vs Free Candy Field </li>
+            <li>Field #6: Pichelo vs Florida Man</li>
+        </ul>
+        <p>Field #2 is north of this parking lot, Field #6 is south </p>
+        <a class="cta" href="https://goo.gl/maps/CP1Gw47qpjuXjKL17">See Field Location</a>
+        
+        <p>
+            <em>Please be sure to be on the lookout for any emails in the event of field cancellations, rainouts, or other kinds of notices.</em>
+        </p>
+        
+        <p>
+            See Ya Soon,<br/>
+            SFL Ultimate
+        </p>
     </div>
 
     <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
@@ -94,8 +107,12 @@
       display: 'inline-block',
       margin: '0 auto',
     },
+    'em': {},
     'p': {},
-    'li': {}
+    'li': {},
+    'a':{
+      color: 'white'
+    }
   }
 
   function applyStyles (tag) {
