Added schedule opengraph tweak

--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -3,7 +3,7 @@ extends ../layouts/default
 block head
   meta(property="og:title"        content="Spring League Schedule")
   meta(property="og:url"          content="https://www.sflultimate.com/schedule")
-  meta(property="og:description"  content="Discover the games schedule for the 2017's Spring League.")
+  meta(property="og:description"  content="Discover the games schedule for " + locals.league.title)
 
   meta(property="og:image"        content="https://www.sflultimate.com/images/open-graph/schedule.jpg")
   meta(property="og:image:width"  content="1200")
