--- a/templates/views/schedule.jade
+++ b/templates/views/schedule.jade
@@ -31,7 +31,7 @@ block content
               span {{game.homeTeam.name}} vs. {{game.awayTeam.name}}
               span(ng-if="game.homeScore && game.awayScore") ({{game.homeScore}}-{{game.awayScore}})
               //- span(ng-if="!game.homeScore && !game.awayScore && (1481518800000 - $parent.today) > 0") (Missing stats for game)
-            td TBD
+            td {{locations[game.location] ? locations[game.location].name: 'TBD'}}
           tr(ng-class="(1481518800000 - $parent.today > 0) ? '':'text-muted' ")
             td Dec 12th
             td 11:00AM-3:00PM
