Added fix for opengraph debugger

--- a/templates/views/community.jade
+++ b/templates/views/community.jade
@@ -1,10 +1,10 @@
 extends ../layouts/default
 
 block head
-  meta(property="og:title"        content="Local Broward/Dade Pickups")
-  meta(property="og:url"          content="https://www.sflultimate.com/pickup")
-  meta(property="og:description"  content="Learn about the local days, times, and locations for ultimate frisbee pickup near you!")
-  meta(property="og:image"        content="https://www.sflultimate.com/images/dave-catching-face.jpg")
+  meta(property="og:title" content="Local Broward/Dade Pickups")
+  meta(property="og:url" content="https://www.sflultimate.com/community")
+  meta(property="og:description" content="Learn about the local days, times, and locations for ultimate frisbee pickup near you!")
+  meta(property="og:image" content="https://www.sflultimate.com/images/dave-catching-face.jpg")
 
 block content
   .container(ng-app='CommunityApp')
