--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -37,7 +37,7 @@ block content
             p Player fees will be put toward fields, lights, insurance, and jerseys for the league.
             
             .alert.alert-info 
-              | Late registration (at a $65 fee for everyone, as space permits) start 
+              | Late registration (at a $50 fee for everyone, as space permits) start 
               | on #{locals.league.lateRegistrationStart.toLocaleDateString(undefined, { weekday: 'long', month: 'short', day: 'numeric', timeZone: 'America/New_York' })} 
               | until #{locals.league.lateRegistrationEnd.toLocaleDateString(undefined, { weekday: 'long', month: 'short', day: 'numeric', timeZone: 'America/New_York' })} at 
               | #{locals.league.lateRegistrationEnd.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit', timeZone: 'America/New_York'})}
@@ -158,8 +158,8 @@ block content
                                 option(value='Adult') Adult - $50
                                 option(value='Student') Student - $30
                             if locals.league.isLateRegistrationPeriod
-                                option(value='Adult') Adult - $65
-                                option(value='Student') Student - $65
+                                option(value='Adult') Adult - $50
+                                option(value='Student') Student - $50
                 
                 .form-group
                     label(for="streetAddress") Street Address
@@ -193,7 +193,8 @@ block content
     else
         .container.register: .row: .col-md-12
             h1 The Registration for #{locals.league.title} has closed
-            p If you wish to be considered for late registration ($65), contact sflultimate@gmail.com. Late registration (at a $65 fee for everyone, as space permits) will be considered on a weekly basis.
+            p If you wish to be considered for late registration ($50), contact sflultimate@gmail.com. Late registration (at a $50 fee for everyone, as space permits) will be considered on a weekly basis.
+            p Note that you will not get a jersey.
 
 block js
     script(src='https://js.braintreegateway.com/v2/braintree.js')
