--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -42,27 +42,27 @@ block content
           h3 Ladies Welcome
           p Our league is co-ed, and is always excited to invite new lady players!
 
-  //- Commented out
-    .container(ng-app="scheduleApp")
+    .container
+      hr
       .row
         .col-md-4
           h3 Current Standings
-          p Here you can see the current standings for the league teams!
+          p Here you can see the current standings for the current league!
         .col-md-8
-          div(ng-controller="ScheduleViewController")
+          div
             table.table.table-striped.table-bordered.text-center(style="margin-top: 2em;")
               thead
-                th.text-center Color
+                th.text-center Name
                 th.text-center Wins
                 th.text-center Losses
                 th.text-center Point Differential
               tbody
-                tr(ng-repeat="team in standingsArr")
-                  td.text-left
-                    {{team.color}}
-                  td {{team.wins}}
-                  td {{team.losses}}
-                  td {{team.pointDiff}}
+                each team in locals.standings
+                  tr
+                    td.text-left=team.name
+                    td=team.wins
+                    td=team.losses
+                    td=team.pointDiff
 
 
   section.champions
