Added week3 email copy

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,5 +1,3 @@
-<!-- Special Message & Beach Tourney Tomorrow: PLEASE READ & Share -->
-<!--file:///Users/dprada/GitHub/sflultimate/templates/emails/email-template.html -->
 <div>
     <div style="background-color: black; padding-top: 20px;">
         <img src="https://www.sflultimate.com/images/logo-skyline.png" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
@@ -10,36 +8,26 @@
 
     <div style="padding: 1em;">
 
-        <h3>South Florida, Fall League Has Begun!</h3>
+        <h3>South Florida, It's Week #3!</h3>
 
         <p>Hello everyone,</p>
-        <p>First of all, thank you to the following volunteers, for their help in making this happen:</p>
-        <ul>
-            <li>Sofia Whittaker</li>
-            <li>Prahasi Khacham</li>
-            <li>AJ Jacoski</li>
-        </ul>
 
-        <p>Thank you to our <strong>amazing captains</strong> of this year's fall league!</p>
-        <ul>
-            <li>Thomas Stoller</li>
-            <li>David Amparan</li>
-            <li>Tomas Heredia</li>
-            <li>Darly Kittle</li>
-        </ul>
+        <p>One final week to see where the teams lie! As a reminder, please be sure to bring a light and dark shirt and your own water.</p>
         
-        <p>Now onto the details you have been waiting, your teams have been drafted and can be seen here: </p>
+        <p>We hope jerseys to be ready by next week, we'll keep you posted.</p>
         
-        <a class="cta" href="https://www.sflultimate.com/teams">See My Team</a>
-
-        <p>As for the games happening today (Wednesday) please be there by <strong>7:15pm.</strong>  Games will start at 8pm.</p>
+        <p>As for the games happening today please be there by <strong>7:15pm.</strong>  Games will start at 8pm.</p>
         <p>Our games for this week are:</p>
         <ul>
-            <li>Field #2: Vice City vs Free Candy Field </li>
-            <li>Field #6: Pichelo vs Florida Man</li>
+            <li><strong>Field #2</strong>: The Florida Man vs Vice City</li>
+            <li><strong>Field #4</strong>: Pichelo vs Free Candy</li>
         </ul>
-        <p>Field #2 is north of this parking lot, Field #6 is south </p>
+        <p>Field #2 and #4 are north of this parking lot.</p>
         <a class="cta" href="https://goo.gl/maps/CP1Gw47qpjuXjKL17">See Field Location</a>
+        
+        <p>By the way, after the games, we will be hanging out at Flanigan's:</p>
+
+        <a class="cta" href="https://goo.gl/maps/FxkFLcrcrv3eSbeW6">See Flanigan's Location</a>
         
         <p>
             <em>Please be sure to be on the lookout for any emails in the event of field cancellations, rainouts, or other kinds of notices.</em>
