--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -27,6 +27,7 @@ block content
           th Assists
           th Scores
           th Defenses
+          th Points Played
           th Overall
         tbody
           tr(ng-repeat="player in leaderboard | orderBy:'-overall'")
@@ -44,6 +45,9 @@ block content
             td
               span(class="badge" ng-if="awards[player.gender].defenses === player.defenses" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}") {{player.defenses}}
               span(ng-if="awards[player.gender].defenses !== player.defenses") {{player.defenses}}
+            td
+              span(class="badge" ng-if="awards[player.gender].pointsPlayed === player.pointsPlayed" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}") {{player.pointsPlayed}}
+              span(ng-if="awards[player.gender].pointsPlayed !== player.pointsPlayed") {{player.pointsPlayed}}
             td
               span(class="badge" ng-if="awards[player.gender].overall === player.overall" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}") {{player.overall}}
               span(ng-if="awards[player.gender].overall !== player.overall") {{player.overall}}
@@ -63,24 +67,26 @@ block content
           th Defenses
           th Overall
         tbody
-          tr(ng-repeat="player in contenders | orderBy:'-Overall'" ng-if="player['Player ID']")
-            td {{$index + leaderboard.length + 1}}
+          tr(ng-repeat="player in contenders | orderBy:'-overall'")
+            td {{$index + 1}}
             td
-              span.team-color(ng-class="player['Team Color'].toLowerCase()" style="opacity: 0.5; margin-left: 1em;")
-            td {{player["First Name"]}}
-            td {{player["Last Name"]}}
-            td.
-                <span class="badge" ng-if="awards[player.gender].Assists === player.Assists" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">{{player["Assists"]}}</span>
-                <span ng-if="awards[player.gender].Assists !== player.Assists">{{player["Assists"]}}</span>
-            td.
-                <span class="badge" ng-if="awards[player.gender].Scores === player.Scores" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">{{player["Scores"]}}</span>
-                <span ng-if="awards[player.gender].Scores !== player.Scores">{{player["Scores"]}}</span>
-            td.
-                <span class="badge" ng-if="awards[player.gender].Defenses === player.Defenses" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">{{player["Defenses"]}}</span>
-                <span ng-if="awards[player.gender].Defenses !== player.Defenses" >{{player["Defenses"]}}</span>
-            td.
-                <span class="badge" ng-if="awards[player.gender].Overall === player.Overall" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}">{{player["Overall"]}}</span>
-                <span ng-if="awards[player.gender].Overall !== player.Overall"> {{player["Overall"]}}</span>
+              span.team-color(ng-style="{'background-color': player.teamColor}")
+            td {{player.name.first}}
+            td {{player.name.last}}
+            td
+              span(class="badge" ng-if="awards[player.gender].assists === player.assists" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}") {{player.assists}}
+              span(ng-if="awards[player.gender].assists !== player.assists") {{player.assists}}
+            td
+              span(class="badge" ng-if="awards[player.gender].scores === player.scores" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}") {{player.scores}}span(ng-if="awards[player.gender].scores !== player.scores") {{player.scores}}
+            td
+              span(class="badge" ng-if="awards[player.gender].defenses === player.defenses" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}") {{player.defenses}}
+              span(ng-if="awards[player.gender].defenses !== player.defenses") {{player.defenses}}
+            td
+              span(class="badge" ng-if="awards[player.gender].pointsPlayed === player.pointsPlayed" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}") {{player.pointsPlayed}}
+              span(ng-if="awards[player.gender].pointsPlayed !== player.pointsPlayed") {{player.pointsPlayed}}
+            td
+              span(class="badge" ng-if="awards[player.gender].overall === player.overall" ng-style="{'background-color': player.Gender === 'Female'? '#F25974':'#4A7CEC'}") {{player.overall}}
+              span(ng-if="awards[player.gender].overall !== player.overall") {{player.overall}}
 
 block js
   script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js')
